testsuite/tests/properties/invalid_enum_nodes/not_enum_node.lkt
import common

class Example: FooNode implements TokenNode {
    @export fun p(): Int = match node.parent {
        case _: Example.Foo => 1
        case _ => 0
    }
}
